<resources>
    <string name="app_name">Record Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recordGait">Record Gait Zone</string>
    <string name="recordStep">Record Step Zone</string>
    <string name="recordRamp">Record Ramp Zone</string>
    <string name="recordUnevcnRoad">Record Uneven Road Zone</string>
    <string name="stop">Stop</string>
</resources>