<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.RecordApplication.AppBarOverlay">

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/startStep"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="@string/recordStep" />

        <Button
            android:id="@+id/startGait"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="@string/recordGait" />

        <Button
            android:id="@+id/startUnevenZone"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="@string/recordUnevcnRoad" />

        <Button
            android:id="@+id/startRamp"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="@string/recordRamp" />

        <Button
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:layout_weight="1"
            android:text="@string/stop" />

        <TextView
            android:id="@+id/currentRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>